tests/bad/12_void_print_15.ris
void foo():
    return;

void main():
    print foo();
    return;