tests/bad/12_void_print_15.err
Type error in line 5, column 5:
tried to print void-type expression: foo ()
